--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   file_picker: ^8.0.0
   pdf: ^3.11.3
   printing: ^5.14.2
+  collection: ^1.19.1
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
