--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   collection: ^1.19.1
   intl: ^0.19.0
   crypto: ^3.0.3
+  flutter_typeahead: ^5.2.0
 
 dev_dependencies:
   flutter_test:
