update tableau de bord update transfert, inventaire modal, ventes modal

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   csv: ^6.0.0
   excel: ^4.0.6
   open_file: ^3.5.10
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
