--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,43 +1,48 @@
 name: gestion_magasin
-description: Application de gestion de magasin pour desktop Windows
-version: 1.0.1+2
+description: "Application de gestion de magasin développée avec Flutter pour desktop Windows."
+publish_to: 'none'
+
+version: 1.0.0+1
 
 environment:
-  sdk: '>=3.0.0 <4.0.0'
-  flutter: ">=3.10.0"
+  sdk: '>=3.10.0 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  cupertino_icons: ^1.0.2
-  drift: ^2.14.1
+
+  # Database
+  drift: ^2.16.0
   sqlite3_flutter_libs: ^0.5.0
   path_provider: ^2.1.1
   path: ^1.8.3
-  file_picker: ^10.3.7
+
+  # UI
+  cupertino_icons: ^1.0.6
+  file_picker: ^8.0.0+1
+
+  # Network
+  shared_preferences: ^2.2.2
+
+  # Utils
+  intl: ^0.20.2
   pdf: ^3.11.3
   printing: ^5.14.2
-  collection: ^1.19.1
-  intl: ^0.20.2
-  crypto: ^3.0.3
-  flutter_typeahead: ^5.2.0
-  flutter_launcher_icons: ^0.14.4
   csv: ^6.0.0
   excel: ^4.0.6
-  open_file: ^3.5.10
-  shared_preferences: ^2.2.2
+  crypto: ^3.0.7
+  collection: ^1.19.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^6.0.0
-  drift_dev: ^2.14.1
+  flutter_lints: ^3.0.0
+  drift_dev: ^2.16.0
   build_runner: ^2.4.7
 
 flutter:
   uses-material-design: true
   assets:
     - assets/images/
-    - assets/icons/
