--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ dependencies:
 
   # UI
   cupertino_icons: ^1.0.6
-  file_picker: ^8.0.0+1
+  file_picker: ^10.3.7
 
   # Network
   shared_preferences: ^2.2.2
@@ -41,7 +41,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.0
+  flutter_lints: ^6.0.0
   drift_dev: ^2.16.0
   build_runner: ^2.4.7
 
