--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
 
   # Network
   shared_preferences: ^2.2.2
+  jwt_decoder: ^2.0.1
   
   # Security
   bcrypt: ^1.1.3
@@ -37,6 +38,7 @@ dependencies:
   excel: ^4.0.6
   crypto: ^3.0.7
   collection: ^1.19.1
+  mockito: ^5.6.1
 
 dev_dependencies:
   flutter_test:
