--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,10 @@ dependencies:
   # Security
   bcrypt: ^1.1.3
 
+  # State Management
+  flutter_riverpod: ^2.5.1
+  riverpod: ^2.5.1
+
   # Utils
   intl: ^0.20.2
   pdf: ^3.11.3
